# ElevenRender

./: .clang-tidy  .clangformat  .gitignore  .gitmodules  .ninja_log.restat  CMakeLists.txt  README.md  build.bat  build.sh  function_body_replace.py
shaders/: 0.ll  1.ll  2.ll
src/: BVH.cpp  BVH.h  BVH.hpp  Camera.cpp  Camera.h  Camera.hpp  CommandManager.cpp  CommandManager.h  Definitions.h  Disney.cpp  Disney.h  Disney.hpp  HDRI.cpp  HDRI.h  HDRI.hpp  Hit.h  Hit.hpp  InputManager.cpp  Logging.cpp  Logging.h  Managers.cpp  Managers.h  Material.cpp  Material.h  Material.hpp  Math.hpp  MeshObject.hpp  ObjLoader.cpp  ObjLoader.h  ObjLoader.hpp  OslMaterial.hpp  PointLight.h  PostProcessing.cpp  Ray.h  Ray.hpp  SYCLCopy.cpp  SYCLCopy.h  Sampling.h  Sampling.hpp  Scene.cpp  (+31 more)
src/lan/: calc.l  calc.ypp
